# OptCPV

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py
backend/app/: api_models.py  (+1 more)
docs/: architecture.md  qa.md
examples/: bme_analog_200.py  ecg_7opamp_demo.py  export_examples.py
optcpv/: __init__.py  artifact.py  critic.py  cv_critic.py  examples.py  figure_semantics.py  grammar.py  hint_legalizer.py  image_overlay.py  intent.py  labels.py  math_label.py  models.py  optimizer.py  patch.py  planner.py  planning_agent.py  planning_hints.py  raster.py  renderer.py  route_contract.py  segments.py  semantic_repair.py  semantics.py  symbols.py  textbook_surrogate.py  vector_critic.py  verifier.py  vision_agent.py  visual_review.py
scripts/: api_smoke_test.py  test_schem_forge.py
tests/: conftest.py  test_adapters.py  test_api.py  test_artifact.py  test_artifact_invariants.py  test_bme_benchmark.py  test_citt_adapter.py  test_citt_visual_exports.py  test_critic_verifier_agent.py  test_cv_critic.py  test_dependencies.py  test_draw_svg.py  test_figure_semantics.py  test_image_overlay.py  test_layout_support.py  test_models.py  test_models_renderer.py  test_motif_validation.py  test_multi_opamp_network.py  test_optimizer.py  test_planners.py  test_planning_agent.py  test_planning_hints_ecg.py  test_quality_gates.py  test_raster.py  test_renderer_schemdraw.py  test_route_contract.py  test_scale_hacking.py  test_schematic_grammar.py  test_scope.py  test_semantic_repair.py  test_textbook_corpus_batch.py  test_textbook_extraction.py  test_textbook_motiflets.py  test_textbook_surrogate.py  test_topology_semantics.py  test_vector_critic.py  test_verifier.py  test_vision_agent.py
tools/: build_textbook_structured_cards.py  extract_textbook_corpus.py  run_textbook_corpus_batch.py  (+2 more)
(+20 files in other folders)
