[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optcpv-schem-forge"
version = "0.1.0"
description = "Deterministic circuit-to-schematic compiler for analog tutoring diagrams."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "pydantic>=2",
    "python-multipart>=0.0.9",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = ["httpx<0.28", "pytest>=7"]
gemini = ["google-genai>=0.5"]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
