[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optcpv"
version = "0.1.0"
description = "Lightweight Python circuit schematic drawing library."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
server = ["fastapi>=0.100", "uvicorn>=0.23"]
schemdraw = ["schemdraw>=0.19"]

[tool.setuptools.packages.find]
include = ["optcpv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
